[tool.poetry]
name = "nautikos"
version = "0.1.0"
description = "A CD tool for updating image tags in Kubernetes manifests"
authors = ["Jan Hein de Jong <janhein.dejong@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
nautikos = "nautikos.nautikos:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.7.0"
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.257"
black = "^23.1.0"
pytest = "^7.2.2"
mypy = "^1.1.1"
types-pyyaml = "^6.0.12.8"
poethepoet = "^0.18.1"


[tool.poe.tasks]
format = [
    {cmd = "ruff check . --fix"}, 
    {cmd = "black ."}
]
test = [
    {cmd = "ruff check ."},
    {cmd = "black . --check"}, 
    {cmd = "mypy ."}
]

[tool.ruff]
select = ["E", "F", "I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
